@@ -1,9 +1,6 @@
 package vc.inreach.aws.request;
 
 import com.amazonaws.util.SdkHttpUtils;
-import com.google.common.collect.ImmutableListMultimap;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Multimap;
 import org.apache.http.Header;
 import org.apache.http.ProtocolVersion;
 import org.apache.http.client.methods.HttpRequestWrapper;
@@ -13,16 +10,15 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.MockitoJUnitRunner;
 
 import java.net.URI;
+import java.util.*;
 
-import static org.mockito.Matchers.anyMapOf;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.anyString;
-import static org.mockito.Mockito.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+
 
 @RunWith(MockitoJUnitRunner.class)
 public class AWSSigningRequestInterceptorTest {
@@ -44,30 +40,31 @@ public class AWSSigningRequestInterceptorTest {
     @Test
     public void noQueryParams() throws Exception {
         final String url = "http://someurl.com";
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of();
+        final Map<String, List<String>> queryParams = new HashMap<>();
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
 
     @Test
     public void queryParamsSupportValuesWithSpaceEncodedAsPlus() throws Exception {
         final String url = "http://someurl.com?a=b+c";
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of("a", "b c");
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put("a", Arrays.asList("b c"));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
     @Test
@@ -75,15 +72,17 @@ public class AWSSigningRequestInterceptorTest {
         final String valueWithAmpersand = "a & b";
         final String encodedValue = SdkHttpUtils.urlEncode(valueWithAmpersand, false);
         final String url = "http://someurl.com?a=" + encodedValue + "&c=d";
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of("a", valueWithAmpersand, "c", "d");
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put("a", Arrays.asList(valueWithAmpersand));
+        queryParams.put("c", Arrays.asList("d"));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
 
@@ -92,45 +91,48 @@ public class AWSSigningRequestInterceptorTest {
         final String key = "scroll_id";
         final String value = "c2NhbjsxOzc3Mjo5WGljUUFNeVJGcVdDSzBjaUVQcDJ3OzE7dG90YWxfaGl0czo1NTg0Ow==";
         final String url = "http://someurl.com?" + key + "=" + value;
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of(key, value);
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put(key, Arrays.asList(value));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
     @Test
     public void queryParamsSupportValuesWithoutEquals() throws Exception {
         final String key = "scroll_id";
         final String url = "http://someurl.com?" + key;
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of(key, "");
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put(key, Arrays.asList(""));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
     @Test
     public void queryParamsSupportEmptyValues() throws Exception {
         final String key = "a";
         final String url = "http://someurl.com?" + key + "=";
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of(key, "");
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put(key, Arrays.asList(""));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
     @Test
@@ -138,15 +140,16 @@ public class AWSSigningRequestInterceptorTest {
         final String key = "a";
         final String value = "b";
         final String url = "http://someurl.com?" + key + "=" + value + "&";
-        final Multimap<String, String> queryParams = ImmutableListMultimap.of(key, value);
+        final Map<String, List<String>> queryParams = new HashMap<>();
+        queryParams.put(key, Arrays.asList(value));
 
-        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class))).thenReturn(ImmutableMap.of());
+        when(signer.getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class))).thenReturn(Map.of());
         mockRequest(url);
 
         interceptor.process(request, context);
 
         verify(request).setHeaders(new Header[]{});
-        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMapOf(String.class, Object.class), any(com.google.common.base.Optional.class));
+        verify(signer).getSignedHeaders(anyString(), anyString(), eq(queryParams), anyMap(), any(Optional.class));
     }
 
     private void mockRequest(String url) throws Exception {
